Ep3 - Lists rename

--- a/ep02-03-04/index.html
+++ b/ep02-03-04/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Episode 3 - Lists</title>
+    <title>Episode 2,3,4</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
